UF-XYZ - Fix OpenAPI attachment clash
Renames a couple of internal attachment classes to be able to distinguish them
from eachother
